<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?attr/panelBackground"
    android:orientation="vertical"
    android:padding="15dp"
    android:showDividers="none"
    android:layout_marginTop="@dimen/layout_margin">


    <Button
        android:id="@+id/main_btn_view_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_view_file" />

    <Button
        android:id="@+id/main_btn_edit_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_edit_file" />

    <Button
        android:id="@+id/main_btn_create_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_create_file" />

    <Button
        android:id="@+id/main_btn_settings"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_settings" />

</LinearLayout>
